--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
         "prettier": "^3.5.3",
         "tailwindcss": "^4.0.0",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^5.2.1",
+        "pinia": "^3.0.1",
+        "vue": "^3.5.13",
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.5.0"
     }
 }
